# Linq-in-Rust

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: lib.rs  m_concate.rs  m_expansion.rs  m_order_by.rs  m_select.rs  m_skip.rs  m_skip_while.rs  m_take.rs  m_take_while.rs  m_where.rs  m_where_by.rs  m_zip_from.rs
src/iter/: average.rs  m_builtin.rs  m_distinct.rs  m_enumerable.rs  m_method.rs  m_order_by.rs  m_select.rs  m_union.rs  mod.rs
src/ops/: m_order_by.rs  m_select.rs  m_where_by.rs  mod.rs
src/tests/: iter_expr.rs  iter_methods.rs  mod.rs  struct_methods_aggregate.rs  struct_methods_concate.rs  struct_methods_contains.rs  struct_methods_order_by.rs  struct_methods_select.rs  struct_methods_select_many.rs  struct_methods_where_by.rs
tests/: int_test.rs
